snapshots/syntax/library/statements/time/time_case_insensitive.snap
---
source: src/syntax/library/statements/time.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: TimeStatement
      children:
        - kind: TimeKeyword
          text: time
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"12:00:00\""
        - kind: Newline
          text: "\n"
