snapshots/syntax/library/statements/time/time_multiple_on_same_line.snap
---
source: src/syntax/library/statements/runtime_state/time.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: TimeStatement
      children:
        - kind: TimeKeyword
          text: Time
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"08:00:00\""
        - kind: ColonOperator
          text: ":"
        - kind: Whitespace
          text: " "
        - kind: TimeKeyword
          text: Time
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"12:00:00\""
        - kind: Newline
          text: "\n"
